--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "es2020",
-    "outDir": "./lib",
+    "outDir": "./dist",
     "baseUrl": ".",
     "allowJs": true,
     "checkJs": true,
