--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
