--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "format": "prettier --write 'src/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -19,8 +21,14 @@
     "name": "foxkdev"
   },
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "@types/jest": "^29.2.3",
+    "eslint": "^8.29.0",
     "jest": "^29.3.1",
-    "typescript": "^4.9.3"
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3",
+    "typescript-tslint-plugin": "^1.0.2"
   }
 }
