--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "moduleResolution": "node",
     "target": "es2020",
     "module": "es2020",
     "outDir": "./dist",
@@ -11,8 +12,14 @@
       "svelte-easy-forms/*": ["src/*"],
       "svelte-easy-forms/validators": ["src/validators"],
       "svelte-easy-forms/validators/*": ["src/validators/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin"
+      }
+    ]
   },
   "include": ["src/**/*.ts", "src/**/*.js"],
-  "exclude": ["node_modules", "**/__tests__/*"]
+  "exclude": ["node_modules", "**/__tests__/*"],
+
 }
